add tests for tool tips and download file

--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,7 @@
         <javafaker.version>1.0.2</javafaker.version>
         <testng.version>7.9.0</testng.version>
         <hamcrest.version>2.2</hamcrest.version>
+        <assertj-core.version>3.25.3</assertj-core.version>
     </properties>
 
     <dependencies>
@@ -44,6 +45,11 @@
             <groupId>com.github.javafaker</groupId>
             <artifactId>javafaker</artifactId>
             <version>${javafaker.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.assertj</groupId>
+            <artifactId>assertj-core</artifactId>
+            <version>${assertj-core.version}</version>
         </dependency>
     </dependencies>
 
